brokers/stellio/stellio/entity-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: stellio-entity-service
  name: entity-service
spec:
  selector:
    matchLabels:
      app: stellio-entity-service
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: stellio-entity-service
    spec:
      containers:
        - env:
          - name: MANAGEMENT_HEALTH_DB_ENABLED
            value: "true"
          - name: MANAGEMENT_HEALTH_DEFAULTS_ENABLED
            value: "true"
          - name: APPLICATION_AUTHENTICATION_ENABLED
            valueFrom:
              configMapKeyRef:
                name: stellio-conf
                key: STELLIO_AUTHENTICATION_ENABLED
          - name: SPRING_DATA_NEO4J_PASSWORD
            valueFrom:
              configMapKeyRef:
                name: stellio-conf
                key: NEO4J_PASSWORD
          - name: SPRING_PROFILES_ACTIVE
            valueFrom:
              configMapKeyRef:
                name: stellio-conf
                key: ENVIRONMENT
          - name: SPRING_CLOUD_STREAM_KAFKA_BINDER_BROKERS
            valueFrom:
              configMapKeyRef:
                name: stellio-conf
                key: KAFKA_URL
          - name: SPRING_KAFKA_BOOTSTRAP_SERVERS
            valueFrom:
              configMapKeyRef:
                name: stellio-conf
                key: KAFKA_URL
          image: 'stellio/stellio-entity-service:v1.12.0'
          name: stellio-entity-service
          ports:
            - containerPort: 8082
              name: entity-service
      restartPolicy: Always
