brokers/stellio/stellio/search-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: stellio-search-service
  name: search-service
spec:
  selector:
    matchLabels:
      app: stellio-search-service
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: stellio-search-service
    spec:
      containers:
        - env:
          - name: MANAGEMENT_HEALTH_DB_ENABLED
            value: "true"
          - name: MANAGEMENT_HEALTH_DEFAULTS_ENABLED
            value: "true"
          - name: APPLICATION_AUTHENTICATION_ENABLED
            valueFrom:
              configMapKeyRef:
                name: stellio-conf
                key: STELLIO_AUTHENTICATION_ENABLED
          - name: STELLIO_SEARCH_DB_DATABASE
            valueFrom:
              configMapKeyRef:
                name: stellio-conf
                key: STELLIO_SEARCH_DB_DATABASE
          - name: SPRING_FLYWAY_URL
            value: jdbc:postgresql://stellio-timescale/$(STELLIO_SEARCH_DB_DATABASE)
          - name: SPRING_PROFILES_ACTIVE
            valueFrom:
              configMapKeyRef:
                name: stellio-conf
                key: ENVIRONMENT
          - name: SPRING_R2DBC_PASSWORD
            valueFrom:
              configMapKeyRef:
                name: stellio-conf
                key: STELLIO_SEARCH_DB_PASSWORD
          - name: SPRING_R2DBC_URL
            value: r2dbc:postgresql://stellio-timescale/$(STELLIO_SEARCH_DB_DATABASE)?ssl=true&sslmode=require
          - name: SPRING_R2DBC_USERNAME
            valueFrom:
              configMapKeyRef:
                name: stellio-conf
                key: STELLIO_SEARCH_DB_USER
          - name: SPRING_CLOUD_STREAM_KAFKA_BINDER_BROKERS
            valueFrom:
              configMapKeyRef:
                name: stellio-conf
                key: KAFKA_URL
          - name: SPRING_KAFKA_BOOTSTRAP_SERVERS
            valueFrom:
              configMapKeyRef:
                name: stellio-conf
                key: KAFKA_URL
          image: 'stellio/stellio-search-service:v1.12.0'
          name: stellio-search-service
          ports:
          - containerPort: 8083
            name: search-service
          resources: {}
      restartPolicy: Always
