brokers/stellio/stellio/api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: stellio-api-gateway
  name: api-gateway
spec:
  type: NodePort
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    app: stellio-api-gateway
