brokers/stellio/stellio/entity-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: stellio-entity-service
  name: entity-service
spec:
  ports:
    - name: "8082"
      port: 8082
      targetPort: 8082
  selector:
    app: stellio-entity-service
