brokers/stellio/stellio/search-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: stellio-search-service
  name: search-service
spec:
  ports:
    - name: "8083"
      port: 8083
      targetPort: 8083
  selector:
    app: stellio-search-service
