brokers/stellio/stellio/subscription-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: stellio-subscription-service
  name: subscription-service
spec:
  ports:
    - name: "8084"
      port: 8084
      targetPort: 8084
  selector:
    app: stellio-subscription-service
