brokers/stellio/stellio/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: stellio
  annotations:
    cert-utils-operator.redhat-cop.io/certs-from-secret: federation-wildcard-tls-secret
spec:
  host: stellio.federation.fiware.dev
  to:
    kind: Service
    name: api-gateway
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
